[package]
name = "cuckoo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[dev-dependencies]
rand = "0.9.0"
loom = "0.7"
criterion = "0.5"

[[bench]]
name = "insert_benchmark"
harness= false

# Don't show warnings about loom cfg.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }